# expfactory-deploy

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  export_to_file.py  local.yml  manage.py  production.yml  pytest.ini  setup.cfg
config/: api_router.py  asgi.py  (+3 more)
expfactory_deploy_dl/: efd_dl.py  pyproject.toml
expfactory_deploy_local/: README.md  pyproject.toml  serve.py  test  test_config  utils.py
expfactory_deploy_local/src/expfactory_deploy_local/: cli.py  serve.py  test_config  utils.py
expfactory_deploy_local/src/expfactory_deploy_local/static/: ax_cpt  test_task  test_task_always_fail
expfactory_deploy_local/src/expfactory_deploy_local/static/css/: default_style.css
expfactory_deploy_local/src/expfactory_deploy_local/static/experiments/: README.txt
expfactory_deploy_local/src/expfactory_deploy_local/static/js/: efSurvey.js  load_experiments.js
expfactory_deploy_local/src/expfactory_deploy_local/static/js/jquery/validate/: jquery.validate-1.12.0.min.js
expfactory_deploy_local/src/expfactory_deploy_local/static/js/jspsych/poldrack_plugins/: jspsych-attention-check.js  jspsych-categorize-audio.js  jspsych-poldrack-categorize.js  jspsych-poldrack-radio-buttonlist.js  jspsych-poldrack-single-stim.js  jspsych-single-stim-button.js  jspsych-writing.js
expfactory_deploy_local/src/expfactory_deploy_local/static/jspsych7/poldrack-plugins/: designs_and_itis.js  fmri_utils.js  plugin-attention-check.js  plugin-post-battery-feedback.js  plugin-stop-signal.js  sample_iti.js
expfactory_deploy_local/src/expfactory_deploy_local/templates/: deploy_template.html
expfactory_deploy_local/static/css/: expfactory.css
expfactory_deploy_local/static/js/: preview.js
expfactory_deploy_local/static/js/jquery/ui/: jquery-ui-1.10.4.custom.min.js
expfactory_deploy_local/static/js/jspsych/: jspsych5.0-change-notes.md
expfactory_deploy_local/static/js/jspsych/plugins/: jspsych-instructions.js
expfactory_deploy_local/static/js/jspsych/poldrack_plugins/: jspsych-consent.js  jspsych-poldrack-survey-multi-choice.js
expfactory_deploy_local/static/js/utils/: poldrack_fmri_utils.js
expfactory_deploy_local/templates/: deploy_template.html
(+258 files in other folders)
