[project]
name = "expfactory-deploy-local"
version = "0.1.0"
description = ""
authors = [{name = "Ross Blair", email="rosswilsonblair@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
"web.py >= 0.62"
]

[project.scripts]
expfactory_deploy_local = 'expfactory_deploy_local.cli:main'
